Fix #827: Not showing full date and time

--- a/public/css/canonizer.css
+++ b/public/css/canonizer.css
@@ -855,7 +855,7 @@ i.supporter.fa.fa-arrow-down {
         flex-direction: column;
         margin-top: 56px;
         padding: 0em 1em;
-        width: 225px;
+        width: 240px;
     }
     #mainNav .navbar-collapse .navbar-sidenav>.nav-item {
         width: 250px;
